--- a/joyyios/TGCameraViewController/Classes/View/Base.lproj/TGPhotoViewController.xib
+++ b/joyyios/TGCameraViewController/Classes/View/Base.lproj/TGPhotoViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E36b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -38,10 +38,10 @@
                     <rect key="frame" x="0.0" y="710" width="600" height="110"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAy-eH-OU9" userLabel="Back" customClass="TGTintedButton">
-                            <rect key="frame" x="20" y="15" width="80" height="80"/>
+                            <rect key="frame" x="20" y="25" width="60" height="60"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="80" id="0Ms-p9-lfD"/>
-                                <constraint firstAttribute="width" constant="80" id="fWA-Gp-xvk"/>
+                                <constraint firstAttribute="height" constant="60" id="0Ms-p9-lfD"/>
+                                <constraint firstAttribute="width" constant="60" id="fWA-Gp-xvk"/>
                             </constraints>
                             <state key="normal" image="CameraBack"/>
                             <connections>
