--- a/joyyios/TGCameraViewController/Classes/View/Base.lproj/TGCameraViewController.xib
+++ b/joyyios/TGCameraViewController/Classes/View/Base.lproj/TGCameraViewController.xib
@@ -29,14 +29,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dit-c7-IZk" userLabel="Top View">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="0.0"/>
                     <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="0mu-lN-Lkb"/>
+                        <constraint firstAttribute="height" id="0mu-lN-Lkb"/>
                     </constraints>
                 </view>
                 <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dIq-rQ-gzr" userLabel="Capture View">
-                    <rect key="frame" x="0.0" y="60" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFF-75-cke" userLabel="Separator View">
                             <rect key="frame" x="0.0" y="299" width="600" height="2"/>
@@ -80,7 +80,7 @@
                     </connections>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ni6-M2-hWT" userLabel="Actions View">
-                    <rect key="frame" x="0.0" y="660" width="600" height="50"/>
+                    <rect key="frame" x="0.0" y="600" width="600" height="50"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nol-dD-ETh" userLabel="Grid" customClass="TGTintedButton">
                             <rect key="frame" x="162" y="5" width="50" height="40"/>
@@ -128,21 +128,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJ9-I8-VJI" userLabel="Bottom View">
-                    <rect key="frame" x="0.0" y="710" width="600" height="110"/>
+                    <rect key="frame" x="0.0" y="650" width="600" height="170"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3k-MF-E1l" userLabel="Close" customClass="TGTintedButton">
-                            <rect key="frame" x="20" y="15" width="80" height="80"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="80" id="cgU-fk-MtB"/>
-                                <constraint firstAttribute="width" constant="80" id="xhg-SH-0Q3"/>
-                            </constraints>
-                            <state key="normal" image="CameraClose"/>
-                            <connections>
-                                <action selector="closeTapped" destination="-1" eventType="touchUpInside" id="mp3-Tj-Kz0"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtQ-Dg-G3i" userLabel="Shot" customClass="TGTintedButton">
-                            <rect key="frame" x="261" y="16" width="78" height="78"/>
+                            <rect key="frame" x="261" y="46" width="78" height="78"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="78" id="HAC-kq-tli"/>
                                 <constraint firstAttribute="height" constant="78" id="Hud-wO-9uR"/>
@@ -153,7 +142,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxI-gO-dPX" userLabel="Album" customClass="TGTintedButton">
-                            <rect key="frame" x="540" y="35" width="40" height="40"/>
+                            <rect key="frame" x="20" y="65" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="Qit-id-URc"/>
                                 <constraint firstAttribute="width" constant="40" id="twe-nl-2AZ"/>
@@ -167,11 +156,9 @@
                     <color key="backgroundColor" red="0.078431372549019607" green="0.078431372549019607" blue="0.078431372549019607" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="centerY" secondItem="wtQ-Dg-G3i" secondAttribute="centerY" id="02I-TO-eyD"/>
-                        <constraint firstAttribute="centerY" secondItem="O3k-MF-E1l" secondAttribute="centerY" id="AlZ-MU-XJk"/>
                         <constraint firstAttribute="centerY" secondItem="wxI-gO-dPX" secondAttribute="centerY" id="Cv6-as-QDW"/>
                         <constraint firstAttribute="centerX" secondItem="wtQ-Dg-G3i" secondAttribute="centerX" id="UII-sp-ZJm"/>
-                        <constraint firstItem="O3k-MF-E1l" firstAttribute="leading" secondItem="rJ9-I8-VJI" secondAttribute="leading" constant="20" id="h2u-nH-RSf"/>
-                        <constraint firstAttribute="trailing" secondItem="wxI-gO-dPX" secondAttribute="trailing" constant="20" id="xUB-TR-bow"/>
+                        <constraint firstItem="wxI-gO-dPX" firstAttribute="leading" secondItem="rJ9-I8-VJI" secondAttribute="leading" constant="20" id="xUB-TR-bow"/>
                     </constraints>
                 </view>
             </subviews>
@@ -249,7 +236,6 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
-        <image name="CameraClose" width="26" height="26"/>
         <image name="CameraFlashAuto" width="41" height="41"/>
         <image name="CameraGrid" width="26" height="26"/>
         <image name="CameraRoll" width="26" height="26"/>
